force-app/main/default/objects/Ambassador_Event__c/Ambassador_Event__c.object-meta.xml
<CustomObject>
    <label>Ambassador Event</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ambassador Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>