force-app/main/default/objects/Ambassador_Event__c/fields/Event_Budget__c.field-meta.xml
<CustomField>
    <fullName>Event_Budget__c</fullName>
    <label>Event Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>