force-app/main/default/objects/Ambassador_Event__c/fields/Outcomes__c.field-meta.xml
<CustomField>
    <fullName>Outcomes__c</fullName>
    <label>Outcomes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>