force-app/main/default/objects/Ambassador_Event__c/fields/Reach_Expected__c.field-meta.xml
<CustomField>
    <fullName>Reach_Expected__c</fullName>
    <label>Reach - Expected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>