force-app/main/default/objects/Ambassador_Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Event_Description__c</columns>
    <columns>Event_Date__c</columns>
    <columns>Event_Type__c</columns>
    <columns>Event_Budget__c</columns>
    <columns>Reach_Expected__c</columns>
    <columns>Reach_Actual_Estimated__c</columns>
    <columns>Notes__c</columns>
    <columns>Outcomes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>